<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161616"
    tools:context=".ShoppingCart">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="55dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/monsteraleaves"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/backToCatalogButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_back_to_catalog"
            android:contentDescription="@string/backicon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="backToCatalog"
            android:text="@string/shopping_cart"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/pale_leaf"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/shoppingCartView"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="70dp"
            android:background="@color/pale_leaf"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Plants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plants"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/shoppingCartView"
            android:textColor="@color/pale_leaf"
            android:textSize="30sp"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toBottomOf="@id/shoppingCartView"
            android:textColor="@color/pale_leaf"
            android:textSize="30sp"
            android:typeface="sans"
            />

        <TextView
            android:id="@+id/PlantNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans"
            app:layout_constraintTop_toBottomOf="@id/Plants"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="12dp"
            android:background="#66000000"/>

        <TextView
            android:id="@+id/PriceTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:typeface="sans"
            app:layout_constraintTop_toBottomOf="@id/Price"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="textEnd"
            android:layout_marginEnd="15dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="15dp"/>





            <TextView
                android:id="@+id/subtotalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/subtotal"
                android:textColor="@color/pale_leaf"
                app:layout_constraintTop_toBottomOf="@id/PlantNames"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/totalPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/PlantNames"
                app:layout_constraintStart_toEndOf="@id/subtotalTextView"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:textColor="@color/pale_leaf"
                android:textSize="30sp"
                android:typeface="sans" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BuyButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/custom_button_white"
        android:text="@string/checkout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />










</androidx.constraintlayout.widget.ConstraintLayout>